<resources>
    <string name="app_name">Selt</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="titleNewAds">Новое объявление</string>
    <string name="todo">TODO</string>
    <string name="title_head_tv">Доска объявлений</string>
    <string name="text_email_et">Введите email</string>
    <string name="text_password_et">Введите пароль</string>
    <string name="text_button_in">Авторизоваться</string>
    <string name="text_reset_password">Забыли пароль?</string>
    <string name="text_help_tv">Помощь</string>
    <string name="text_create_account_tv">Нет аккаунта? Зарегистрироваться</string>
</resources>