<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".UI.LoginActivity">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="175dp"
            android:layout_height="175dp"
            android:layout_gravity="center"
            android:layout_marginBottom="150dp"
            app:srcCompat="@drawable/logo"
            android:contentDescription="@string/todo" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/emailMCV"
            style="@style/MaterialCardView">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailLayout"
                style="@style/TextInputLayoutStyle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_email_et"
                    android:inputType="textEmailAddress"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/passwordMCV"
            style="@style/MaterialCardView"
            android:layout_marginTop="20dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordLayout"
                style="@style/TextInputLayoutStyle"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_password_et"
                    android:inputType="textPassword"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/btnInMCV"
            style="@style/MaterialCardView"
            android:layout_marginTop="20dp">


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnIn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_btn"
                android:text="@string/text_button_in"
                android:textColor="@color/white" />
        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp">


            <TextView
                android:id="@+id/rememberPasswordTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:text="@string/text_reset_password"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/helpTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="10dp"
                android:gravity="end"
                android:text="@string/text_help_tv"
                android:textStyle="bold"/>
        </LinearLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:text="@string/text_create_account_tv"
            android:layout_marginBottom="75dp"
            android:textStyle="bold"
            android:textColor="@color/black" />

    </LinearLayout>