<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".UI.SignUpActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="175dp"
        android:layout_height="175dp"
        android:layout_gravity="center"
        android:layout_marginBottom="100dp"
        app:srcCompat="@drawable/logo"
        android:contentDescription="@string/todo" />

    <com.google.android.material.card.MaterialCardView
        style="@style/MaterialCardView">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayoutStyle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailSignUpEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_email_et"
                android:inputType="textEmailAddress"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        style="@style/MaterialCardView"
        android:layout_marginTop="20dp">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayoutStyle"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordSignUpEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_password_et"
                android:inputType="textPassword"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        style="@style/MaterialCardView"
        android:layout_marginTop="20dp">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayoutStyle"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/returnPasswordSignUpEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/return_text_password_et"
                android:inputType="textPassword"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/btnInMCV"
        style="@style/MaterialCardView"
        android:layout_marginTop="20dp">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnUp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_btn"
            android:text="Зарегистрироваться"
            android:textColor="@color/white" />
    </com.google.android.material.card.MaterialCardView>

</LinearLayout>